--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
     "bugs": {
         "url": "https://github.com/cabrerajuanjo/marketplace-magiclog/issues"
     },
-    "homepage": "https://github.com/cabrerajuanjo/marketplace-magiclog#readme"
+    "homepage": "https://github.com/cabrerajuanjo/marketplace-magiclog#readme",
+    "dependencies": {
+        "bcrypt": "5.1.1",
+        "jsonwebtoken": "9.0.2"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "5.0.2",
+        "@types/jsonwebtoken": "9.0.7"
+    }
 }
